# super-mario-sunshine-RL

./: .gitignore  README.md  project.md  pyproject.toml  temp.ps1
docs/: fail_flag_selection.md  progress_address_selection.md  success_flag_selection.md  success_flag_selection_purple.md
scripts/: action_timing_probe.py  debug_dolphin_signals.py  dump_env_frames.py  eval_ppo_checkpoint.py  find_fail_flag_candidates.py  find_success_flag_candidates.py  find_true_finish_flag_candidates.py  inspect_pointer_roots.py  log_manual_race_trace.py  probe_named_position_fields.py  probe_object_offsets.py  probe_position_pointer_chain.py  run_dolphin_baselines.ps1  run_dolphin_ppo_train.ps1  run_dolphin_ppo_train_soft_reset.ps1  run_dolphin_smoke.ps1  sample_watch_values.py  watch_training.ps1
sms_rl/: __init__.py  baselines.py  cli.py  config.py  courses.py  train_ppo.py  types.py
sms_rl/drivers/: __init__.py  base.py  dolphin.py  mock.py
sms_rl/envs/: __init__.py  blooper_surfing.py
tests/: test_dolphin_driver_helpers.py  test_env_smoke.py
