[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "super-mario-sunshine-rl"
version = "0.1.0"
description = "Gymnasium scaffolding for a Super Mario Sunshine RL environment."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "gymnasium>=1.1",
    "numpy>=1.26",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
]
training = [
    "stable-baselines3>=2.3.0",
    "tensorboard>=2.16.0",
    "imageio>=2.34.0",
    "imageio-ffmpeg>=0.5.0",
]
windows-dolphin = [
    "dolphin-memory-engine>=1.3.0",
    "dxcam>=0.0.5",
    "vgamepad>=0.1.0",
]

[project.scripts]
sms-rl = "sms_rl.cli:main"
sms-rl-train = "sms_rl.train_ppo:main"

[tool.setuptools.packages.find]
include = ["sms_rl*"]
